Fix contrast

--- a/source/assets/styles/base/_global.scss
+++ b/source/assets/styles/base/_global.scss
@@ -3,7 +3,7 @@
 }
 body {
     font-family: 'Open Sans', sans-serif;
-    color: #7F7F7F;
+    color: #595959;
     font-weight: normal;
     -webkit-font-smoothing: antialiased;
     font-size: 13px;
