--- a/source/assets/styles/blocks/_nav.scss
+++ b/source/assets/styles/blocks/_nav.scss
@@ -16,7 +16,7 @@
     list-style: none
 }
 .nav__menu__item a{
-    color: #7F7F7F;
+    color: #595959;
     text-decoration: none;
     margin-left: 60px;
 }
